--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UniStud</string>
+    <string name="facebook_app_id">1994735643972371</string>
+    <string name="fb_login_protocol_scheme">fb1994735643972371</string>
+
 </resources>
