--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,34 @@
     <string name="facebook_app_id">1994735643972371</string>
     <string name="fb_login_protocol_scheme">fb1994735643972371</string>
 
+
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
+
+    <!--ABOUT STRINGS-->
+    <string name="title_contributors">Contributors:</string>
+    <string name="member_albjon">Albjon Gjuzi</string>
+    <string name="member_arba">Arba Hoxha</string>
+    <string name="member_aurel">Aurel Hoxha</string>
+    <string name="member_eniselda">Eniselda Tusku</string>
+    <string name="project_location">Bilkent University\nAnkara,Turkey</string>
+
+    <!-- Navigation Drawer menu labels -->
+    <string name="nav_organization_home">Home</string>
+    <string name="nav_organization_internships">Internships</string>
+    <string name="nav_organization_events">Events</string>
+    <string name="nav_organization_profile">Profile</string>
+
+    <string name="nav_about_us">About Us</string>
+    <string name="nav_log_out">Logout</string>
+
+
+    <!-- Toolbar titles when navigation menu item is selected -->
+    <string-array name="nav_organization_item_activity_titles">
+        <item>Home</item>
+        <item>Internships</item>
+        <item>Events</item>
+        <item>Profile</item>
+    </string-array>
+
 </resources>
