Some Minor Changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="action_add_internship">Add Internship</string>
     <string name="action_add_event">Add Event</string>
     <string name="action_add_tutorial">Add Tutorial</string>
+    <string name="action_add_univeristy">Add University</string>
     <!--CALENDAR STRINGS-->
     <string name="dialog_calendar">ADD NEW EVENT</string>
 
