--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <!-- Navigation Drawer menu labels -->
     <string name="nav_organization_home">Home</string>
     <string name="nav_organization_internships">Internships</string>
+    <string name="nav_student_opportunities">Opportunities</string>
     <string name="nav_organization_events">Events</string>
     <string name="nav_organization_profile">Profile</string>
     <string name="nav_student_university">Universities</string>
