--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
         <item>Home</item>
         <item>Universities</item>
         <item>Internships</item>
+        <item>Opportunities</item>
         <item>Tutorials</item>
         <item>UniTrade</item>
         <item>Events</item>
